objects/ASI_CRM_Dynamic_Approval_Route__c.object
<CustomObject>
    <description>For CN CRM Use</description>
    <fields>
        <fullName>ASI_CRM_Approval_Limit__c</fullName>
        <label>Approval Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department__c</fullName>
        <formula>Text(ASI_CRM_User__r.ASI_MFM_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_of_Dynamic_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Dynamic Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manager_ID__c</fullName>
        <formula>IF(
CONTAINS(RecordType.DeveloperName, &quot;TW&quot;),
ASI_CRM_User__r.ASI_Line_Manager__c,
ASI_CRM_User__r.ManagerId 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manager_Name__c</fullName>
        <formula>ASI_CRM_User__r.ASI_Line_Manager__r.FirstName + &quot; &quot; +  ASI_CRM_User__r.ASI_Line_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Skip_to_Next_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip to Next Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>IOM</fullName>
                </value>
                <value>
                    <fullName>WS T1</fullName>
                </value>
                <value>
                    <fullName>WS T2</fullName>
                </value>
                <value>
                    <fullName>Channel Strategy</fullName>
                </value>
                <value>
                    <fullName>WS Evaluation</fullName>
                </value>
                <value>
                    <fullName>Last Payment</fullName>
                </value>
                <value>
                    <fullName>PR Direct</fullName>
                </value>
                <value>
                    <fullName>AB General</fullName>
                </value>
                <value>
                    <fullName>Sales Order - IHBR</fullName>
                </value>
                <value>
                    <fullName>Sales Order - HQ</fullName>
                </value>
                <value>
                    <fullName>Price - Customer Price (IHBR)</fullName>
                </value>
                <value>
                    <fullName>Cancel WS T1</fullName>
                </value>
                <value>
                    <fullName>Cancel WS T2</fullName>
                </value>
                <value>
                    <fullName>Free Goods Request</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
                <value>
                    <fullName>EC Authorization Request</fullName>
                </value>
                <value>
                    <fullName>HQ STK4 Order</fullName>
                </value>
                <value>
                    <fullName>Central STK4 Order</fullName>
                </value>
                <value>
                    <fullName>MKT STK4 Order</fullName>
                </value>
                <value>
                    <fullName>Vendor Form</fullName>
                </value>
                <value>
                    <fullName>East STK4 Order</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>Replacement Stock &amp; CIQ-Operation only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Dynamic_Approval_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI CRM Dynamic Approval Route</label>
    <listViews>
        <fullName>ASI_CRM_CN_CRM_Dynamic_Approval_Routes_P</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>CN CRM Dynamic Approval Routes PO</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Dynamic_Approval_Route</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Manager_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>contains</operation>
            <value>,Sales Order - With Credit Hold,Free Goods Request,Sales Order - With Credit Ho</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_MY_Dynamic_Approval_Route</value>
        </filters>
        <label>MY Dynamic Approval Route</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
            <roleAndSubordinates>ASI_PRA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>POSM</value>
        </filters>
        <label>CN CRM All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_All1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <label>CN CRM All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_All_cancel_T2</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_User__c</field>
            <operation>equals</operation>
            <value>Leo LV</value>
        </filters>
        <label>CN CRM All - sunev</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_AB_policy</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>AB General</value>
        </filters>
        <label>CN CRM Dynamic - AB policy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Approval_Routes_Payment1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Payment,Last Payment</value>
        </filters>
        <label>CN CRM Dynamic Approval Routes Payment</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Approval_Routes_T2</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>WS T2</value>
        </filters>
        <label>CN CRM Dynamic Approval Routes_T2</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_EC_Authorization_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>EC Authorization Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <label>CN CRM Dynamic_EC Authorization Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Free_Goods</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Free Goods Request</value>
        </filters>
        <label>CN CRM Dynamic - Free Goods</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Free_Goods2</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>HQ STK4 Order,Central STK4 Order,MKT STK4 Order,East STK4 Order</value>
        </filters>
        <label>CN CRM Dynamic - STK4</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Michelle_FANG</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_User__c</field>
            <operation>contains</operation>
            <value>Michelle FANG</value>
        </filters>
        <label>CN CRM Dynamic - Michelle FANG</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_POSM</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>POSM</value>
        </filters>
        <label>CN CRM Dynamic - POSM</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Vendor</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>contains</operation>
            <value>Vendor</value>
        </filters>
        <label>CN CRM Dynamic - Vendor</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW_FOC</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_Department__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>ASI_CRM_Manager_Name__c</columns>
        <columns>ASI_CRM_Skip_to_Next_Level__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_TW_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>FOC</value>
        </filters>
        <label>TW  - FOC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DAR{000000}</displayFormat>
        <label>ASI CRM Dynamic Approval Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI CRM Dynamic Approval Routes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Dynamic_Approval_Route</fullName>
        <active>true</active>
        <label>CN Dynamic Approval Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Dynamic_Approval_Route</fullName>
        <active>true</active>
        <label>MY Dynamic Approval Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Dynamic_Approval_Route</fullName>
        <active>true</active>
        <label>TW Dynamic Approval Route</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>